# src/api/v1/auth/controllers/index.js
@@ -1,0 +1,9 @@
+/** @format */
+
+const login = require("./login");
+const register = require("./register");
+
+module.exports = {
+    login,
+    register,
+};
